Ignore local .rvmrc and *.gem files
Ensures there are comments justifying all entries in `.gitigore`.

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,12 @@
+# Ignore locally built gem files.
+*.gem
+
 # Allow for local tweaking of rspec options.
 .rspec
 
+# Allow for local rvm settings.
+.rvmrc
+
+# We're a gem, so we don't commit Gemfile.lock.
+# http://yehudakatz.com/2010/12/16/clarifying-the-roles-of-the-gemspec-and-gemfile/
 Gemfile.lock
